# Full-Stack-Modern-Data-Architecture-and-Engineering

./: .gitignore  Dockerfile.schema-init  Makefile  Makefile.bak  README.md  docker-compose.yml  readme_routineA.md  routine_a.md  runbook.md
airflow/: Dockerfile
airflow/dags/: dbt_warehouse_schedule.py
analytics/: readme.md
analytics/dbt/: .user.yml  Dockerfile  dbt_project.yml  (+1 more)
argocd/: dev.yaml  prd.yaml  qa.yaml
avro-codegen/: pom.xml
cicd/: readme.md
connect/: Dockerfile
docs/: architecture.md  architecture_design.md  deployment.md  openmetadata-deployment-plan.md  routine_a.md  routine_b.md  runbook.md
iceberg-writer/: pyproject.toml  readme.md
iceberg-writer/app/: main.py
kafka-connect/: readme.md
mdm-pyspark-sync/: readme.md
mdm-source/: Dockerfile  readme.md
mdm-writer/: readme.md
metadata/: readme.md
observability/: readme.md
ods-connect/: Dockerfile
platform-services/: readme.md
process-apps/: readme.md
process-apps/mdm-cdc-curate/: Dockerfile  pyproject.toml  readme.md
process-apps/mdm-cdc-curate/app/: main.py
processing-apps/: readme.md
processor/: pom.xml  readme.md
schemas/: CustomerSalesProjection.avsc  register-schemas.sh
scripts/: bootstrap-kind.sh  build-images.sh  check-iceberg-streaming-unified.sh  consolidated-register-connector.sh  create-topics.sh  docker-create-topics.sh  docker-register-connectors.sh  docker-register-schemas.sh  kafka-topics.sh  register-all-connectors.sh  register-connectors.sh  register-sample-connector.sh  register-schemas.sh
source-apps/: readme.md
trino/: readme.md
(+175 files in other folders)
